--- a/styles.css
+++ b/styles.css
@@ -71,9 +71,9 @@ body {
 }
 
 body {
-  font-family: sans-serif;
+  font-family: "Maven Pro", sans-serif;
   font-size: 18px;
-  width: 1250px;
+  width: 1000px;
 }
 
 .wrapper {
@@ -131,6 +131,31 @@ header img {
   height: 250px;
 }
 
+.content h2,
+.content h3 {
+  display: block;
+  text-align: center;
+}
+
+.content h2 {
+  width: 100%;
+  height: 70px;
+  background-color: #343433;
+  color: #FFF;
+  font-size: 38px;
+  padding-top: 20px;
+}
+
+.content h3 {
+  width: calc(100% - 2px);
+  color: gray;
+  font-size: 20px;
+  height: 30px;
+  padding-top: 10px;
+  border: 1px solid gray;
+  font-style: italic;
+}
+
 /* Footer */
 
 footer {
@@ -154,6 +179,17 @@ footer h2 {
 #phone,
 #email {
   height: 20px;
-  width: 20px;
   vertical-align: middle;
+}
+
+#phone {
+  width: 20px;
+  padding-left: 50px;
+  margin-right: 15px;
+}
+
+#email {
+  width: 30px;
+  padding-left: 125px;
+  margin-right: 10px;
 }
