--- a/styles.css
+++ b/styles.css
@@ -140,7 +140,7 @@ header img {
 .content h2 {
   width: 100%;
   height: 70px;
-  background-color: #343433;
+  background-color: #333333;
   color: #FFF;
   font-size: 38px;
   padding-top: 20px;
@@ -148,12 +148,58 @@ header img {
 
 .content h3 {
   width: calc(100% - 2px);
-  color: gray;
+  color: #666666;
   font-size: 20px;
   height: 30px;
   padding-top: 10px;
   border: 1px solid gray;
   font-style: italic;
+}
+
+/* Grid */
+
+.grid {
+  width: 85%;
+  margin: 0 auto;
+}
+
+.box,
+.box-right {
+  width: 30%;
+  display: inline-block;
+  vertical-align: top;
+  background-color: #333333;
+  color: #FFF;
+  height: 330px;
+  border: 1px solid black;
+  margin: 15px 0;
+  text-align: center;
+  padding-top: 10px;
+  font-weight: bold;
+}
+
+.box img,
+.box-right img {
+  width: 100%;
+  height: 255px;
+  padding-top: 15px;
+}
+
+.grid input {
+  margin-top: 5px;
+  background-color: #F5B16A;
+  border-radius: 3px;
+  width: 100px;
+  height: 28px;
+  border: 1px solid black;
+}
+
+.grid input:hover {
+  border: 1px solid #00D2E5;
+}
+
+.box {
+  margin-right: 39.5px;
 }
 
 /* Footer */
@@ -164,7 +210,7 @@ footer {
   bottom: 0;
   left: 0;
   position: absolute;
-  background-color: #343433;
+  background-color: #333333;
   text-align: center;
   line-height: 30px;
   letter-spacing: 3px;
